--- a/1_Intro_to_Python.ipynb
+++ b/1_Intro_to_Python.ipynb
@@ -1648,6 +1648,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1_Intro_to_Python.ipynb             Regression.ipynb\r\n",
+      "Control_Flow.ipynb                  Scripting_Error_Handling.ipynb\r\n",
+      "Data_Structures.ipynb               \u001b[34mdata\u001b[m\u001b[m\r\n",
+      "Functions.ipynb                     optimizing_code_common_books.ipynb\r\n",
+      "Iterators and Generators.ipynb      optimizing_code_holiday_gifts.ipynb\r\n",
+      "Magic_Methods.ipynb                 refactor_wine_quality.ipynb\r\n",
+      "README.md                           \u001b[34mscripts\u001b[m\u001b[m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\r\n",
+      "Your branch is up to date with 'origin/master'.\r\n",
+      "\r\n",
+      "Changes not staged for commit:\r\n",
+      "  (use \"git add <file>...\" to update what will be committed)\r\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\r\n",
+      "\t\u001b[31mmodified:   1_Intro_to_Python.ipynb\u001b[m\r\n",
+      "\r\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
