--- a/1_Intro_to_Python.ipynb
+++ b/1_Intro_to_Python.ipynb
@@ -1647,6 +1647,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add your changes to your github"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1671,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1692,6 +1699,81 @@
    ],
    "source": [
     "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add 1_Intro_to_Python.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\r\n",
+      "Your branch is up to date with 'origin/master'.\r\n",
+      "\r\n",
+      "Changes to be committed:\r\n",
+      "  (use \"git restore --staged <file>...\" to unstage)\r\n",
+      "\t\u001b[32mmodified:   1_Intro_to_Python.ipynb\u001b[m\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master b68051c] latest changes\r\n",
+      " 1 file changed, 48 insertions(+)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"latest changes\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enumerating objects: 5, done.\n",
+      "Counting objects: 100% (5/5), done.\n",
+      "Delta compression using up to 36 threads\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 785 bytes | 785.00 KiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "To https://github.com/Wildertrek/Python_Basics.git\n",
+      "   b1df702..b68051c  master -> master\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
    ]
   },
   {
